doc/audits/tools/v0.2.0/aderyn/aderyn-report.md
# Aderyn Analysis Report

This report was generated by [Aderyn](https://github.com/Cyfrin/aderyn), a static analysis tool built by [Cyfrin](https://cyfrin.io), a blockchain security company. This report is not a substitute for manual audit or security review. It should not be relied upon for any purpose other than to assist in the identification of potential security vulnerabilities.
# Table of Contents

- [Summary](#summary)
  - [Files Summary](#files-summary)
  - [Files Details](#files-details)
  - [Issue Summary](#issue-summary)
- [High Issues](#high-issues)
  - [H-1: Arbitrary `from` Passed to `transferFrom`](#h-1-arbitrary-from-passed-to-transferfrom)
  - [H-2: Contract locks Ether without a withdraw function](#h-2-contract-locks-ether-without-a-withdraw-function)
- [Low Issues](#low-issues)
  - [L-1: Centralization Risk](#l-1-centralization-risk)
  - [L-2: Unsafe ERC20 Operation](#l-2-unsafe-erc20-operation)
  - [L-3: Unspecific Solidity Pragma](#l-3-unspecific-solidity-pragma)
  - [L-4: PUSH0 Opcode](#l-4-push0-opcode)
  - [L-5: Empty Block](#l-5-empty-block)
  - [L-6: Loop Contains `require`/`revert`](#l-6-loop-contains-requirerevert)
  - [L-7: Unused State Variable](#l-7-unused-state-variable)
  - [L-8: Costly operations inside loop](#l-8-costly-operations-inside-loop)


# Summary

## Files Summary

| Key | Value |
| --- | --- |
| .sol Files | 17 |
| Total nSLOC | 902 |


## Files Details

| Filepath | nSLOC |
| --- | --- |
| contracts/deployment/lite/ComplianceTokenCMTATLiteStandalone.sol | 13 |
| contracts/deployment/lite/ComplianceTokenCMTATLiteUUPSUpgradeable.sol | 12 |
| contracts/deployment/lite/ComplianceTokenCMTATLiteUpgradeable.sol | 7 |
| contracts/deployment/standard/ComplianceTokenCMTATStandalone.sol | 13 |
| contracts/deployment/standard/ComplianceTokenCMTATUUPSUpgradeable.sol | 9 |
| contracts/deployment/standard/ComplianceTokenCMTATUpgradeable.sol | 7 |
| contracts/interfaces/IERC7943Fungible.sol | 9 |
| contracts/modules/chainlink-ace/custom/CrossChainMintBurnExtractor.sol | 30 |
| contracts/modules/chainlink-ace/custom/ERC20TransferFromExtractor.sol | 35 |
| contracts/modules/chainlink-ace/custom/MintBurnExtractor.sol | 40 |
| contracts/modules/chainlink-ace/custom/TransferValidationPolicy.sol | 81 |
| contracts/modules/lite/CCTCMTATBaseERC1404.sol | 92 |
| contracts/modules/lite/CCTCMTATBaseERC20CrossChain.sol | 86 |
| contracts/modules/lite/CCTCMTATBasePolicyEngine.sol | 108 |
| contracts/modules/lite/PolicyValidationModuleERC1404.sol | 77 |
| contracts/modules/lite/ValidationModulePolicyEngine.sol | 92 |
| contracts/modules/standard/CCTCommon.sol | 191 |
| **Total** | **902** |


## Issue Summary

| Category | No. of Issues |
| --- | --- |
| High | 2 |
| Low | 8 |


# High Issues

## H-1: Arbitrary `from` Passed to `transferFrom`

Passing an arbitrary `from` address to `transferFrom` (or `safeTransferFrom`) can lead to loss of funds, because anyone can transfer tokens from the `from` address if an approval is made.

<details><summary>1 Found Instances</summary>


- Found in contracts/modules/lite/CCTCMTATBaseERC20CrossChain.sol [Line: 39](../../../contracts/modules/lite/CCTCMTATBaseERC20CrossChain.sol#L39)

	```solidity
	        return CMTATBaseCommon.transferFrom(from, to, value);
	```

</details>



## H-2: Contract locks Ether without a withdraw function

It appears that the contract includes a payable function to accept Ether but lacks a corresponding function to withdraw it, which leads to the Ether being locked in the contract. To resolve this issue, please implement a public or external function that allows for the withdrawal of Ether from the contract.

<details><summary>3 Found Instances</summary>


- Found in contracts/deployment/lite/ComplianceTokenCMTATLiteUUPSUpgradeable.sol [Line: 13](../../../contracts/deployment/lite/ComplianceTokenCMTATLiteUUPSUpgradeable.sol#L13)

	```solidity
	contract ComplianceTokenCMTATLiteUUPSUpgradeable is CCTCMTATBaseERC20CrossChain, UUPSUpgradeable {
	```

- Found in contracts/deployment/standard/ComplianceTokenCMTATUUPSUpgradeable.sol [Line: 13](../../../contracts/deployment/standard/ComplianceTokenCMTATUUPSUpgradeable.sol#L13)

	```solidity
	contract ComplianceTokenCMTATUUPSUpgradeable is CCTCommon, UUPSUpgradeable {
	```

- Found in contracts/modules/chainlink-ace/custom/TransferValidationPolicy.sol [Line: 25](../../../contracts/modules/chainlink-ace/custom/TransferValidationPolicy.sol#L25)

	```solidity
	contract TransferValidationPolicy is Policy {
	```

</details>



# Low Issues

## L-1: Centralization Risk

Contracts have owners with privileged rights to perform admin tasks and need to be trusted to not perform malicious updates or drain funds.

<details><summary>11 Found Instances</summary>


- Found in contracts/deployment/lite/ComplianceTokenCMTATLiteUUPSUpgradeable.sol [Line: 27](../../../contracts/deployment/lite/ComplianceTokenCMTATLiteUUPSUpgradeable.sol#L27)

	```solidity
	    ) internal virtual override(UUPSUpgradeable) onlyRole(PROXY_UPGRADE_ROLE) {}
	```

- Found in contracts/deployment/standard/ComplianceTokenCMTATUUPSUpgradeable.sol [Line: 23](../../../contracts/deployment/standard/ComplianceTokenCMTATUUPSUpgradeable.sol#L23)

	```solidity
	    function _authorizeUpgrade(address newImplementation) internal virtual override(UUPSUpgradeable) onlyOwner {}
	```

- Found in contracts/modules/chainlink-ace/custom/TransferValidationPolicy.sol [Line: 65](../../../contracts/modules/chainlink-ace/custom/TransferValidationPolicy.sol#L65)

	```solidity
	    function setRules(IRule[] calldata rules_) external onlyOwner {
	```

- Found in contracts/modules/lite/CCTCMTATBaseERC20CrossChain.sol [Line: 114](../../../contracts/modules/lite/CCTCMTATBaseERC20CrossChain.sol#L114)

	```solidity
	    function _authorizeCCIPSetAdmin() internal virtual override(CCIPModule) onlyRole(DEFAULT_ADMIN_ROLE) {}
	```

- Found in contracts/modules/lite/CCTCMTATBaseERC20CrossChain.sol [Line: 138](../../../contracts/modules/lite/CCTCMTATBaseERC20CrossChain.sol#L138)

	```solidity
	        onlyRole(BURNER_FROM_ROLE)
	```

- Found in contracts/modules/lite/CCTCMTATBaseERC20CrossChain.sol [Line: 151](../../../contracts/modules/lite/CCTCMTATBaseERC20CrossChain.sol#L151)

	```solidity
	        onlyRole(BURNER_SELF_ROLE)
	```

- Found in contracts/modules/lite/CCTCMTATBasePolicyEngine.sol [Line: 143](../../../contracts/modules/lite/CCTCMTATBasePolicyEngine.sol#L143)

	```solidity
	    function _authorizeAttachPolicyEngine(address) internal virtual override onlyRole(DEFAULT_ADMIN_ROLE) {}
	```

- Found in contracts/modules/lite/CCTCMTATBasePolicyEngine.sol [Line: 149](../../../contracts/modules/lite/CCTCMTATBasePolicyEngine.sol#L149)

	```solidity
	    function _authorizePause() internal virtual override(PauseModule) onlyRole(PAUSER_ROLE) {}
	```

- Found in contracts/modules/lite/CCTCMTATBasePolicyEngine.sol [Line: 150](../../../contracts/modules/lite/CCTCMTATBasePolicyEngine.sol#L150)

	```solidity
	    function _authorizeDeactivate() internal virtual override(PauseModule) onlyRole(DEFAULT_ADMIN_ROLE) {}
	```

- Found in contracts/modules/lite/CCTCMTATBasePolicyEngine.sol [Line: 152](../../../contracts/modules/lite/CCTCMTATBasePolicyEngine.sol#L152)

	```solidity
	    function _authorizeFreeze() internal virtual override(EnforcementModule) onlyRole(ENFORCER_ROLE) {}
	```

- Found in contracts/modules/standard/CCTCommon.sol [Line: 146](../../../contracts/modules/standard/CCTCommon.sol#L146)

	```solidity
	    function _authorizeAttachPolicyEngine(address) internal virtual override onlyOwner {}
	```

</details>



## L-2: Unsafe ERC20 Operation

ERC20 functions may not behave as expected. For example: return values are not always meaningful. It is recommended to use OpenZeppelin's SafeERC20 library.

<details><summary>9 Found Instances</summary>


- Found in contracts/modules/chainlink-ace/custom/ERC20TransferFromExtractor.sol [Line: 36](../../../contracts/modules/chainlink-ace/custom/ERC20TransferFromExtractor.sol#L36)

	```solidity
	        if (payload.selector == IERC20.transfer.selector) {
	```

- Found in contracts/modules/chainlink-ace/custom/ERC20TransferFromExtractor.sol [Line: 40](../../../contracts/modules/chainlink-ace/custom/ERC20TransferFromExtractor.sol#L40)

	```solidity
	        } else if (payload.selector == IERC20.transferFrom.selector) {
	```

- Found in contracts/modules/lite/CCTCMTATBaseERC20CrossChain.sol [Line: 23](../../../contracts/modules/lite/CCTCMTATBaseERC20CrossChain.sol#L23)

	```solidity
	        return ERC20Upgradeable.approve(spender, value);
	```

- Found in contracts/modules/lite/CCTCMTATBaseERC20CrossChain.sol [Line: 29](../../../contracts/modules/lite/CCTCMTATBaseERC20CrossChain.sol#L29)

	```solidity
	        return CMTATBaseCommon.transfer(to, value);
	```

- Found in contracts/modules/lite/ValidationModulePolicyEngine.sol [Line: 72](../../../contracts/modules/lite/ValidationModulePolicyEngine.sol#L72)

	```solidity
	        return _tryCheckPolicies(IERC20.transferFrom.selector, spender, abi.encode(from, to, value));
	```

- Found in contracts/modules/lite/ValidationModulePolicyEngine.sol [Line: 80](../../../contracts/modules/lite/ValidationModulePolicyEngine.sol#L80)

	```solidity
	        return _tryCheckPolicies(IERC20.transfer.selector, from, abi.encode(to, value));
	```

- Found in contracts/modules/standard/CCTCommon.sol [Line: 133](../../../contracts/modules/standard/CCTCommon.sol#L133)

	```solidity
	        return CMTATBaseCommon.transfer(to, value);
	```

- Found in contracts/modules/standard/CCTCommon.sol [Line: 209](../../../contracts/modules/standard/CCTCommon.sol#L209)

	```solidity
	        return _canTransferWithPolicyEngine(IERC20.transfer.selector, from, abi.encode(to, value));
	```

- Found in contracts/modules/standard/CCTCommon.sol [Line: 225](../../../contracts/modules/standard/CCTCommon.sol#L225)

	```solidity
	        return _canTransferWithPolicyEngine(IERC20.transferFrom.selector, spender, abi.encode(from, to, value));
	```

</details>



## L-3: Unspecific Solidity Pragma

Consider using a specific version of Solidity in your contracts instead of a wide version. For example, instead of `pragma solidity ^0.8.0;`, use `pragma solidity 0.8.0;`

<details><summary>17 Found Instances</summary>


- Found in contracts/deployment/lite/ComplianceTokenCMTATLiteStandalone.sol [Line: 3](../../../contracts/deployment/lite/ComplianceTokenCMTATLiteStandalone.sol#L3)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/deployment/lite/ComplianceTokenCMTATLiteUUPSUpgradeable.sol [Line: 3](../../../contracts/deployment/lite/ComplianceTokenCMTATLiteUUPSUpgradeable.sol#L3)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/deployment/lite/ComplianceTokenCMTATLiteUpgradeable.sol [Line: 3](../../../contracts/deployment/lite/ComplianceTokenCMTATLiteUpgradeable.sol#L3)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/deployment/standard/ComplianceTokenCMTATStandalone.sol [Line: 3](../../../contracts/deployment/standard/ComplianceTokenCMTATStandalone.sol#L3)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/deployment/standard/ComplianceTokenCMTATUUPSUpgradeable.sol [Line: 3](../../../contracts/deployment/standard/ComplianceTokenCMTATUUPSUpgradeable.sol#L3)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/deployment/standard/ComplianceTokenCMTATUpgradeable.sol [Line: 3](../../../contracts/deployment/standard/ComplianceTokenCMTATUpgradeable.sol#L3)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/interfaces/IERC7943Fungible.sol [Line: 2](../../../contracts/interfaces/IERC7943Fungible.sol#L2)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/modules/chainlink-ace/custom/CrossChainMintBurnExtractor.sol [Line: 2](../../../contracts/modules/chainlink-ace/custom/CrossChainMintBurnExtractor.sol#L2)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/modules/chainlink-ace/custom/ERC20TransferFromExtractor.sol [Line: 2](../../../contracts/modules/chainlink-ace/custom/ERC20TransferFromExtractor.sol#L2)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/modules/chainlink-ace/custom/MintBurnExtractor.sol [Line: 2](../../../contracts/modules/chainlink-ace/custom/MintBurnExtractor.sol#L2)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/modules/chainlink-ace/custom/TransferValidationPolicy.sol [Line: 3](../../../contracts/modules/chainlink-ace/custom/TransferValidationPolicy.sol#L3)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/modules/lite/CCTCMTATBaseERC1404.sol [Line: 3](../../../contracts/modules/lite/CCTCMTATBaseERC1404.sol#L3)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/modules/lite/CCTCMTATBaseERC20CrossChain.sol [Line: 3](../../../contracts/modules/lite/CCTCMTATBaseERC20CrossChain.sol#L3)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/modules/lite/CCTCMTATBasePolicyEngine.sol [Line: 3](../../../contracts/modules/lite/CCTCMTATBasePolicyEngine.sol#L3)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/modules/lite/PolicyValidationModuleERC1404.sol [Line: 3](../../../contracts/modules/lite/PolicyValidationModuleERC1404.sol#L3)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/modules/lite/ValidationModulePolicyEngine.sol [Line: 3](../../../contracts/modules/lite/ValidationModulePolicyEngine.sol#L3)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/modules/standard/CCTCommon.sol [Line: 3](../../../contracts/modules/standard/CCTCommon.sol#L3)

	```solidity
	pragma solidity ^0.8.20;
	```

</details>



## L-4: PUSH0 Opcode

Solc compiler version 0.8.20 switches the default target EVM version to Shanghai, which means that the generated bytecode will include PUSH0 opcodes. Be sure to select the appropriate EVM version in case you intend to deploy on a chain other than mainnet like L2 chains that may not support PUSH0, otherwise deployment of your contracts will fail.

<details><summary>17 Found Instances</summary>


- Found in contracts/deployment/lite/ComplianceTokenCMTATLiteStandalone.sol [Line: 3](../../../contracts/deployment/lite/ComplianceTokenCMTATLiteStandalone.sol#L3)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/deployment/lite/ComplianceTokenCMTATLiteUUPSUpgradeable.sol [Line: 3](../../../contracts/deployment/lite/ComplianceTokenCMTATLiteUUPSUpgradeable.sol#L3)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/deployment/lite/ComplianceTokenCMTATLiteUpgradeable.sol [Line: 3](../../../contracts/deployment/lite/ComplianceTokenCMTATLiteUpgradeable.sol#L3)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/deployment/standard/ComplianceTokenCMTATStandalone.sol [Line: 3](../../../contracts/deployment/standard/ComplianceTokenCMTATStandalone.sol#L3)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/deployment/standard/ComplianceTokenCMTATUUPSUpgradeable.sol [Line: 3](../../../contracts/deployment/standard/ComplianceTokenCMTATUUPSUpgradeable.sol#L3)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/deployment/standard/ComplianceTokenCMTATUpgradeable.sol [Line: 3](../../../contracts/deployment/standard/ComplianceTokenCMTATUpgradeable.sol#L3)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/interfaces/IERC7943Fungible.sol [Line: 2](../../../contracts/interfaces/IERC7943Fungible.sol#L2)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/modules/chainlink-ace/custom/CrossChainMintBurnExtractor.sol [Line: 2](../../../contracts/modules/chainlink-ace/custom/CrossChainMintBurnExtractor.sol#L2)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/modules/chainlink-ace/custom/ERC20TransferFromExtractor.sol [Line: 2](../../../contracts/modules/chainlink-ace/custom/ERC20TransferFromExtractor.sol#L2)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/modules/chainlink-ace/custom/MintBurnExtractor.sol [Line: 2](../../../contracts/modules/chainlink-ace/custom/MintBurnExtractor.sol#L2)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/modules/chainlink-ace/custom/TransferValidationPolicy.sol [Line: 3](../../../contracts/modules/chainlink-ace/custom/TransferValidationPolicy.sol#L3)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/modules/lite/CCTCMTATBaseERC1404.sol [Line: 3](../../../contracts/modules/lite/CCTCMTATBaseERC1404.sol#L3)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/modules/lite/CCTCMTATBaseERC20CrossChain.sol [Line: 3](../../../contracts/modules/lite/CCTCMTATBaseERC20CrossChain.sol#L3)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/modules/lite/CCTCMTATBasePolicyEngine.sol [Line: 3](../../../contracts/modules/lite/CCTCMTATBasePolicyEngine.sol#L3)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/modules/lite/PolicyValidationModuleERC1404.sol [Line: 3](../../../contracts/modules/lite/PolicyValidationModuleERC1404.sol#L3)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/modules/lite/ValidationModulePolicyEngine.sol [Line: 3](../../../contracts/modules/lite/ValidationModulePolicyEngine.sol#L3)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/modules/standard/CCTCommon.sol [Line: 3](../../../contracts/modules/standard/CCTCommon.sol#L3)

	```solidity
	pragma solidity ^0.8.20;
	```

</details>



## L-5: Empty Block

Consider removing empty blocks.

<details><summary>21 Found Instances</summary>


- Found in contracts/deployment/lite/ComplianceTokenCMTATLiteUUPSUpgradeable.sol [Line: 25](../../../contracts/deployment/lite/ComplianceTokenCMTATLiteUUPSUpgradeable.sol#L25)

	```solidity
	    function _authorizeUpgrade(
	```

- Found in contracts/deployment/standard/ComplianceTokenCMTATUUPSUpgradeable.sol [Line: 23](../../../contracts/deployment/standard/ComplianceTokenCMTATUUPSUpgradeable.sol#L23)

	```solidity
	    function _authorizeUpgrade(address newImplementation) internal virtual override(UUPSUpgradeable) onlyOwner {}
	```

- Found in contracts/modules/lite/CCTCMTATBaseERC20CrossChain.sol [Line: 114](../../../contracts/modules/lite/CCTCMTATBaseERC20CrossChain.sol#L114)

	```solidity
	    function _authorizeCCIPSetAdmin() internal virtual override(CCIPModule) onlyRole(DEFAULT_ADMIN_ROLE) {}
	```

- Found in contracts/modules/lite/CCTCMTATBaseERC20CrossChain.sol [Line: 134](../../../contracts/modules/lite/CCTCMTATBaseERC20CrossChain.sol#L134)

	```solidity
	    function _authorizeBurnFrom()
	```

- Found in contracts/modules/lite/CCTCMTATBaseERC20CrossChain.sol [Line: 147](../../../contracts/modules/lite/CCTCMTATBaseERC20CrossChain.sol#L147)

	```solidity
	    function _authorizeSelfBurn()
	```

- Found in contracts/modules/lite/CCTCMTATBasePolicyEngine.sol [Line: 143](../../../contracts/modules/lite/CCTCMTATBasePolicyEngine.sol#L143)

	```solidity
	    function _authorizeAttachPolicyEngine(address) internal virtual override onlyRole(DEFAULT_ADMIN_ROLE) {}
	```

- Found in contracts/modules/lite/CCTCMTATBasePolicyEngine.sol [Line: 149](../../../contracts/modules/lite/CCTCMTATBasePolicyEngine.sol#L149)

	```solidity
	    function _authorizePause() internal virtual override(PauseModule) onlyRole(PAUSER_ROLE) {}
	```

- Found in contracts/modules/lite/CCTCMTATBasePolicyEngine.sol [Line: 150](../../../contracts/modules/lite/CCTCMTATBasePolicyEngine.sol#L150)

	```solidity
	    function _authorizeDeactivate() internal virtual override(PauseModule) onlyRole(DEFAULT_ADMIN_ROLE) {}
	```

- Found in contracts/modules/lite/CCTCMTATBasePolicyEngine.sol [Line: 152](../../../contracts/modules/lite/CCTCMTATBasePolicyEngine.sol#L152)

	```solidity
	    function _authorizeFreeze() internal virtual override(EnforcementModule) onlyRole(ENFORCER_ROLE) {}
	```

- Found in contracts/modules/standard/CCTCommon.sol [Line: 146](../../../contracts/modules/standard/CCTCommon.sol#L146)

	```solidity
	    function _authorizeAttachPolicyEngine(address) internal virtual override onlyOwner {}
	```

- Found in contracts/modules/standard/CCTCommon.sol [Line: 291](../../../contracts/modules/standard/CCTCommon.sol#L291)

	```solidity
	    function _authorizeERC20AttributeManagement() internal virtual override(ERC20BaseModule) runPolicy {}
	```

- Found in contracts/modules/standard/CCTCommon.sol [Line: 297](../../../contracts/modules/standard/CCTCommon.sol#L297)

	```solidity
	    function _authorizeMint() internal virtual override(ERC20MintModule) runPolicy {}
	```

- Found in contracts/modules/standard/CCTCommon.sol [Line: 303](../../../contracts/modules/standard/CCTCommon.sol#L303)

	```solidity
	    function _authorizeBurn() internal virtual override(ERC20BurnModule) runPolicy {}
	```

- Found in contracts/modules/standard/CCTCommon.sol [Line: 309](../../../contracts/modules/standard/CCTCommon.sol#L309)

	```solidity
	    function _authorizeDocumentManagement() internal virtual override(DocumentERC1643Module) runPolicy {}
	```

- Found in contracts/modules/standard/CCTCommon.sol [Line: 315](../../../contracts/modules/standard/CCTCommon.sol#L315)

	```solidity
	    function _authorizeExtraInfoManagement() internal virtual override(ExtraInformationModule) runPolicy {}
	```

- Found in contracts/modules/standard/CCTCommon.sol [Line: 321](../../../contracts/modules/standard/CCTCommon.sol#L321)

	```solidity
	    function _authorizeERC20Enforcer() internal virtual override(ERC20EnforcementModule) runPolicy {}
	```

- Found in contracts/modules/standard/CCTCommon.sol [Line: 327](../../../contracts/modules/standard/CCTCommon.sol#L327)

	```solidity
	    function _authorizeForcedTransfer() internal virtual override(ERC20EnforcementModule) runPolicy {}
	```

- Found in contracts/modules/standard/CCTCommon.sol [Line: 333](../../../contracts/modules/standard/CCTCommon.sol#L333)

	```solidity
	    function _authorizeCCIPSetAdmin() internal virtual override(CCIPModule) runPolicy {}
	```

- Found in contracts/modules/standard/CCTCommon.sol [Line: 344](../../../contracts/modules/standard/CCTCommon.sol#L344)

	```solidity
	    function _checkTokenBridge(address caller) internal virtual override(ERC20CrossChainModule) runPolicy {}
	```

- Found in contracts/modules/standard/CCTCommon.sol [Line: 351](../../../contracts/modules/standard/CCTCommon.sol#L351)

	```solidity
	    function _authorizeBurnFrom() internal virtual override(ERC20CrossChainModule) runPolicy {}
	```

- Found in contracts/modules/standard/CCTCommon.sol [Line: 358](../../../contracts/modules/standard/CCTCommon.sol#L358)

	```solidity
	    function _authorizeSelfBurn() internal virtual override(ERC20CrossChainModule) runPolicy {}
	```

</details>



## L-6: Loop Contains `require`/`revert`

Avoid `require` / `revert` statements in a loop because a single bad item can cause the whole transaction to fail. It's better to forgive on fail and return failed elements post processing of the loop

<details><summary>4 Found Instances</summary>


- Found in contracts/modules/chainlink-ace/custom/TransferValidationPolicy.sol [Line: 54](../../../contracts/modules/chainlink-ace/custom/TransferValidationPolicy.sol#L54)

	```solidity
	            for (uint256 i = 0; i < ruleAddrs.length; ++i) {
	```

- Found in contracts/modules/chainlink-ace/custom/TransferValidationPolicy.sol [Line: 69](../../../contracts/modules/chainlink-ace/custom/TransferValidationPolicy.sol#L69)

	```solidity
	        for (uint256 i = 0; i < rules_.length; ++i) {
	```

- Found in contracts/modules/chainlink-ace/custom/TransferValidationPolicy.sol [Line: 113](../../../contracts/modules/chainlink-ace/custom/TransferValidationPolicy.sol#L113)

	```solidity
	            for (uint256 i = 0; i < len; ++i) {
	```

- Found in contracts/modules/chainlink-ace/custom/TransferValidationPolicy.sol [Line: 126](../../../contracts/modules/chainlink-ace/custom/TransferValidationPolicy.sol#L126)

	```solidity
	            for (uint256 i = 0; i < len; ++i) {
	```

</details>



## L-7: Unused State Variable

State variable appears to be unused. No analysis has been performed to see if any inline assembly references it. Consider removing this unused variable.

<details><summary>1 Found Instances</summary>


- Found in contracts/modules/chainlink-ace/custom/TransferValidationPolicy.sol [Line: 37](../../../contracts/modules/chainlink-ace/custom/TransferValidationPolicy.sol#L37)

	```solidity
	    bytes32 private constant STORAGE_LOCATION = 0xd90ded5881f9295c61e86b2e3b551acbb5fe06f9f79d0cec87ddc5bb60d48e00;
	```

</details>



## L-8: Costly operations inside loop

Invoking `SSTORE` operations in loops may waste gas. Use a local variable to hold the loop computation result.

<details><summary>2 Found Instances</summary>


- Found in contracts/modules/chainlink-ace/custom/TransferValidationPolicy.sol [Line: 54](../../../contracts/modules/chainlink-ace/custom/TransferValidationPolicy.sol#L54)

	```solidity
	            for (uint256 i = 0; i < ruleAddrs.length; ++i) {
	```

- Found in contracts/modules/chainlink-ace/custom/TransferValidationPolicy.sol [Line: 69](../../../contracts/modules/chainlink-ace/custom/TransferValidationPolicy.sol#L69)

	```solidity
	        for (uint256 i = 0; i < rules_.length; ++i) {
	```

</details>



