doc/audits/tools/v0.3.0/aderyn/aderyn-report.md
# Aderyn Report — v0.3.0 (mocks INCLUDED in scope)

> Command: `aderyn --output doc/audits/tools/v0.3.0/aderyn/aderyn-report.md` (Aderyn 0.6.5, **no `-x mocks`** → mocks in scope). nSLOC 1324.
> Assessment: [`aderyn-report-feedback.md`](./aderyn-report-feedback.md). Overview: [`doc/audits/AUDIT_OVERVIEW.md`](../../../AUDIT_OVERVIEW.md).

## Summary

**2 High · 11 Low** — **nothing to fix** (every item is a known false-positive, an intentional design choice, environment/dependency noise, mock-only, or cosmetic).

| ID | Finding | Instances | Assessment |
| --- | --- | --- | --- |
| H-1 | Arbitrary `from` passed to `transferFrom` | 1 | **Accepted in context** — policy-gated flow; not an unguarded arbitrary-transfer primitive. |
| H-2 | Contract locks Ether without withdraw | 3 | **False positive** — these are token contracts, not ETH custody. |
| L-1 | Centralization Risk | 12 | **By design** — privileged governance is intentional (gate behind timelock/multisig). |
| L-2 | Unsafe ERC20 Operation | 9 | **False positive** — selector/module-flow usage, not unsafe transfer wrappers. |
| L-3 | Unspecific Solidity Pragma | 21 | **By design** — version ranges are intentional. |
| L-4 | Literal Instead of Constant | 4 | **Cosmetic** — `parameters.length == 3/4` (the IRule param-layout branch) + mocks; optional. |
| L-5 | PUSH0 Opcode | 21 | **Environment-dependent** informational. |
| L-6 | Modifier Invoked Only Once | 1 | **Cosmetic** style. |
| L-7 | Empty Block | 37 | **By design** — authorization-hook pattern (`_authorizeX() {}`). |
| L-8 | Loop Contains `require`/`revert` | 4 | **By design** — atomic validation / explicit failure signaling. |
| L-9 | Unused State Variable | 1 | **False positive** — `STORAGE_LOCATION` is used via inline assembly in `_getStorage()` (ERC-7201); Aderyn notes it doesn't trace assembly. |
| L-10 | Costly operations inside loop | 2 | **By design** — expected tradeoff in policy/rule iteration. |
| L-11 | State Change Without Event | 10 | **Mock-only** — all 10 instances are in `…/mocks/*` (present only because `-m` includes mocks); test scaffolding needs no events. |

> The nSLOC and several categories (`Empty Block`, `Unsafe ERC20`, `State Change Without Event`) are inflated vs. a non-mock run because **mocks are included** (`-m`). The mock-driven items do not apply to the production contracts.

---

# Aderyn Analysis Report

This report was generated by [Aderyn](https://github.com/Cyfrin/aderyn), a static analysis tool built by [Cyfrin](https://cyfrin.io), a blockchain security company. This report is not a substitute for manual audit or security review. It should not be relied upon for any purpose other than to assist in the identification of potential security vulnerabilities.
# Table of Contents

- [Summary](#summary)
  - [Files Summary](#files-summary)
  - [Files Details](#files-details)
  - [Issue Summary](#issue-summary)
- [High Issues](#high-issues)
  - [H-1: Arbitrary `from` Passed to `transferFrom`](#h-1-arbitrary-from-passed-to-transferfrom)
  - [H-2: Contract locks Ether without a withdraw function](#h-2-contract-locks-ether-without-a-withdraw-function)
- [Low Issues](#low-issues)
  - [L-1: Centralization Risk](#l-1-centralization-risk)
  - [L-2: Unsafe ERC20 Operation](#l-2-unsafe-erc20-operation)
  - [L-3: Unspecific Solidity Pragma](#l-3-unspecific-solidity-pragma)
  - [L-4: Literal Instead of Constant](#l-4-literal-instead-of-constant)
  - [L-5: PUSH0 Opcode](#l-5-push0-opcode)
  - [L-6: Modifier Invoked Only Once](#l-6-modifier-invoked-only-once)
  - [L-7: Empty Block](#l-7-empty-block)
  - [L-8: Loop Contains `require`/`revert`](#l-8-loop-contains-requirerevert)
  - [L-9: Unused State Variable](#l-9-unused-state-variable)
  - [L-10: Costly operations inside loop](#l-10-costly-operations-inside-loop)
  - [L-11: State Change Without Event](#l-11-state-change-without-event)


# Summary

## Files Summary

| Key | Value |
| --- | --- |
| .sol Files | 21 |
| Total nSLOC | 1324 |


## Files Details

| Filepath | nSLOC |
| --- | --- |
| contracts/deployment/lite/ComplianceTokenCMTATLiteStandalone.sol | 13 |
| contracts/deployment/lite/ComplianceTokenCMTATLiteUUPSUpgradeable.sol | 12 |
| contracts/deployment/lite/ComplianceTokenCMTATLiteUpgradeable.sol | 7 |
| contracts/deployment/standard/ComplianceTokenCMTATStandalone.sol | 13 |
| contracts/deployment/standard/ComplianceTokenCMTATUUPSUpgradeable.sol | 9 |
| contracts/deployment/standard/ComplianceTokenCMTATUpgradeable.sol | 7 |
| contracts/interfaces/IERC7943Fungible.sol | 9 |
| contracts/modules/CCTVersionModule.sol | 8 |
| contracts/modules/chainlink-ace/custom/CrossChainMintBurnExtractor.sol | 30 |
| contracts/modules/chainlink-ace/custom/ERC20TransferFromExtractor.sol | 35 |
| contracts/modules/chainlink-ace/custom/MintBurnExtractor.sol | 44 |
| contracts/modules/chainlink-ace/custom/TransferValidationPolicy.sol | 110 |
| contracts/modules/chainlink-ace/mocks/CanSendReceiveOverrideMock.sol | 25 |
| contracts/modules/chainlink-ace/mocks/PolicyProtectedUpgradeableMocks.sol | 74 |
| contracts/modules/chainlink-ace/mocks/TransferRuleMocks.sol | 223 |
| contracts/modules/lite/CCTCMTATBaseERC1404.sol | 85 |
| contracts/modules/lite/CCTCMTATBaseERC20CrossChain.sol | 135 |
| contracts/modules/lite/CCTCMTATBasePolicyEngine.sol | 108 |
| contracts/modules/lite/PolicyValidationModuleERC1404.sol | 77 |
| contracts/modules/lite/ValidationModulePolicyEngine.sol | 92 |
| contracts/modules/standard/CCTCommon.sol | 208 |
| **Total** | **1324** |


## Issue Summary

| Category | No. of Issues |
| --- | --- |
| High | 2 |
| Low | 11 |


# High Issues

## H-1: Arbitrary `from` Passed to `transferFrom`

Passing an arbitrary `from` address to `transferFrom` (or `safeTransferFrom`) can lead to loss of funds, because anyone can transfer tokens from the `from` address if an approval is made.

<details><summary>1 Found Instances</summary>


- Found in contracts/modules/lite/CCTCMTATBaseERC20CrossChain.sol [Line: 40](../../../../../contracts/modules/lite/CCTCMTATBaseERC20CrossChain.sol#L40)

	```solidity
	        return CMTATBaseCommon.transferFrom(from, to, value);
	```

</details>



## H-2: Contract locks Ether without a withdraw function

It appears that the contract includes a payable function to accept Ether but lacks a corresponding function to withdraw it, which leads to the Ether being locked in the contract. To resolve this issue, please implement a public or external function that allows for the withdrawal of Ether from the contract.

<details><summary>3 Found Instances</summary>


- Found in contracts/deployment/lite/ComplianceTokenCMTATLiteUUPSUpgradeable.sol [Line: 13](../../../../../contracts/deployment/lite/ComplianceTokenCMTATLiteUUPSUpgradeable.sol#L13)

	```solidity
	contract ComplianceTokenCMTATLiteUUPSUpgradeable is CCTCMTATBaseERC20CrossChain, UUPSUpgradeable {
	```

- Found in contracts/deployment/standard/ComplianceTokenCMTATUUPSUpgradeable.sol [Line: 13](../../../../../contracts/deployment/standard/ComplianceTokenCMTATUUPSUpgradeable.sol#L13)

	```solidity
	contract ComplianceTokenCMTATUUPSUpgradeable is CCTCommon, UUPSUpgradeable {
	```

- Found in contracts/modules/chainlink-ace/custom/TransferValidationPolicy.sol [Line: 25](../../../../../contracts/modules/chainlink-ace/custom/TransferValidationPolicy.sol#L25)

	```solidity
	contract TransferValidationPolicy is Policy {
	```

</details>



# Low Issues

## L-1: Centralization Risk

Contracts have owners with privileged rights to perform admin tasks and need to be trusted to not perform malicious updates or drain funds.

<details><summary>12 Found Instances</summary>


- Found in contracts/deployment/lite/ComplianceTokenCMTATLiteUUPSUpgradeable.sol [Line: 27](../../../../../contracts/deployment/lite/ComplianceTokenCMTATLiteUUPSUpgradeable.sol#L27)

	```solidity
	    ) internal virtual override(UUPSUpgradeable) onlyRole(PROXY_UPGRADE_ROLE) {}
	```

- Found in contracts/deployment/standard/ComplianceTokenCMTATUUPSUpgradeable.sol [Line: 23](../../../../../contracts/deployment/standard/ComplianceTokenCMTATUUPSUpgradeable.sol#L23)

	```solidity
	    function _authorizeUpgrade(address newImplementation) internal virtual override(UUPSUpgradeable) onlyOwner {}
	```

- Found in contracts/modules/chainlink-ace/custom/TransferValidationPolicy.sol [Line: 67](../../../../../contracts/modules/chainlink-ace/custom/TransferValidationPolicy.sol#L67)

	```solidity
	    function setRules(IRule[] calldata rules_) external onlyOwner {
	```

- Found in contracts/modules/chainlink-ace/mocks/TransferRuleMocks.sol [Line: 117](../../../../../contracts/modules/chainlink-ace/mocks/TransferRuleMocks.sol#L117)

	```solidity
	    function setRestricted(address account, bool status) external onlyOwner {
	```

- Found in contracts/modules/lite/CCTCMTATBaseERC20CrossChain.sol [Line: 221](../../../../../contracts/modules/lite/CCTCMTATBaseERC20CrossChain.sol#L221)

	```solidity
	    function _authorizeCCIPSetAdmin() internal virtual override(CCIPModule) onlyRole(DEFAULT_ADMIN_ROLE) {}
	```

- Found in contracts/modules/lite/CCTCMTATBaseERC20CrossChain.sol [Line: 245](../../../../../contracts/modules/lite/CCTCMTATBaseERC20CrossChain.sol#L245)

	```solidity
	        onlyRole(BURNER_FROM_ROLE)
	```

- Found in contracts/modules/lite/CCTCMTATBaseERC20CrossChain.sol [Line: 258](../../../../../contracts/modules/lite/CCTCMTATBaseERC20CrossChain.sol#L258)

	```solidity
	        onlyRole(BURNER_SELF_ROLE)
	```

- Found in contracts/modules/lite/CCTCMTATBasePolicyEngine.sol [Line: 135](../../../../../contracts/modules/lite/CCTCMTATBasePolicyEngine.sol#L135)

	```solidity
	    function _authorizeAttachPolicyEngine(address) internal virtual override onlyRole(DEFAULT_ADMIN_ROLE) {}
	```

- Found in contracts/modules/lite/CCTCMTATBasePolicyEngine.sol [Line: 157](../../../../../contracts/modules/lite/CCTCMTATBasePolicyEngine.sol#L157)

	```solidity
	    function _authorizePause() internal virtual override(PauseModule) onlyRole(PAUSER_ROLE) {}
	```

- Found in contracts/modules/lite/CCTCMTATBasePolicyEngine.sol [Line: 158](../../../../../contracts/modules/lite/CCTCMTATBasePolicyEngine.sol#L158)

	```solidity
	    function _authorizeDeactivate() internal virtual override(PauseModule) onlyRole(DEFAULT_ADMIN_ROLE) {}
	```

- Found in contracts/modules/lite/CCTCMTATBasePolicyEngine.sol [Line: 160](../../../../../contracts/modules/lite/CCTCMTATBasePolicyEngine.sol#L160)

	```solidity
	    function _authorizeFreeze() internal virtual override(EnforcementModule) onlyRole(ENFORCER_ROLE) {}
	```

- Found in contracts/modules/standard/CCTCommon.sol [Line: 149](../../../../../contracts/modules/standard/CCTCommon.sol#L149)

	```solidity
	    function _authorizeAttachPolicyEngine(address) internal virtual override onlyOwner {}
	```

</details>



## L-2: Unsafe ERC20 Operation

ERC20 functions may not behave as expected. For example: return values are not always meaningful. It is recommended to use OpenZeppelin's SafeERC20 library.

<details><summary>9 Found Instances</summary>


- Found in contracts/modules/chainlink-ace/custom/ERC20TransferFromExtractor.sol [Line: 36](../../../../../contracts/modules/chainlink-ace/custom/ERC20TransferFromExtractor.sol#L36)

	```solidity
	        if (payload.selector == IERC20.transfer.selector) {
	```

- Found in contracts/modules/chainlink-ace/custom/ERC20TransferFromExtractor.sol [Line: 40](../../../../../contracts/modules/chainlink-ace/custom/ERC20TransferFromExtractor.sol#L40)

	```solidity
	        } else if (payload.selector == IERC20.transferFrom.selector) {
	```

- Found in contracts/modules/lite/CCTCMTATBaseERC20CrossChain.sol [Line: 24](../../../../../contracts/modules/lite/CCTCMTATBaseERC20CrossChain.sol#L24)

	```solidity
	        return ERC20Upgradeable.approve(spender, value);
	```

- Found in contracts/modules/lite/CCTCMTATBaseERC20CrossChain.sol [Line: 30](../../../../../contracts/modules/lite/CCTCMTATBaseERC20CrossChain.sol#L30)

	```solidity
	        return CMTATBaseCommon.transfer(to, value);
	```

- Found in contracts/modules/lite/ValidationModulePolicyEngine.sol [Line: 72](../../../../../contracts/modules/lite/ValidationModulePolicyEngine.sol#L72)

	```solidity
	        return _tryCheckPolicies(IERC20.transferFrom.selector, spender, abi.encode(from, to, value));
	```

- Found in contracts/modules/lite/ValidationModulePolicyEngine.sol [Line: 80](../../../../../contracts/modules/lite/ValidationModulePolicyEngine.sol#L80)

	```solidity
	        return _tryCheckPolicies(IERC20.transfer.selector, from, abi.encode(to, value));
	```

- Found in contracts/modules/standard/CCTCommon.sol [Line: 136](../../../../../contracts/modules/standard/CCTCommon.sol#L136)

	```solidity
	        return CMTATBaseCommon.transfer(to, value);
	```

- Found in contracts/modules/standard/CCTCommon.sol [Line: 248](../../../../../contracts/modules/standard/CCTCommon.sol#L248)

	```solidity
	        return _canTransferWithPolicyEngine(IERC20.transfer.selector, from, abi.encode(to, value));
	```

- Found in contracts/modules/standard/CCTCommon.sol [Line: 264](../../../../../contracts/modules/standard/CCTCommon.sol#L264)

	```solidity
	        return _canTransferWithPolicyEngine(IERC20.transferFrom.selector, spender, abi.encode(from, to, value));
	```

</details>



## L-3: Unspecific Solidity Pragma

Consider using a specific version of Solidity in your contracts instead of a wide version. For example, instead of `pragma solidity ^0.8.0;`, use `pragma solidity 0.8.0;`

<details><summary>21 Found Instances</summary>


- Found in contracts/deployment/lite/ComplianceTokenCMTATLiteStandalone.sol [Line: 3](../../../../../contracts/deployment/lite/ComplianceTokenCMTATLiteStandalone.sol#L3)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/deployment/lite/ComplianceTokenCMTATLiteUUPSUpgradeable.sol [Line: 3](../../../../../contracts/deployment/lite/ComplianceTokenCMTATLiteUUPSUpgradeable.sol#L3)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/deployment/lite/ComplianceTokenCMTATLiteUpgradeable.sol [Line: 3](../../../../../contracts/deployment/lite/ComplianceTokenCMTATLiteUpgradeable.sol#L3)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/deployment/standard/ComplianceTokenCMTATStandalone.sol [Line: 3](../../../../../contracts/deployment/standard/ComplianceTokenCMTATStandalone.sol#L3)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/deployment/standard/ComplianceTokenCMTATUUPSUpgradeable.sol [Line: 3](../../../../../contracts/deployment/standard/ComplianceTokenCMTATUUPSUpgradeable.sol#L3)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/deployment/standard/ComplianceTokenCMTATUpgradeable.sol [Line: 3](../../../../../contracts/deployment/standard/ComplianceTokenCMTATUpgradeable.sol#L3)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/interfaces/IERC7943Fungible.sol [Line: 2](../../../../../contracts/interfaces/IERC7943Fungible.sol#L2)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/modules/CCTVersionModule.sol [Line: 3](../../../../../contracts/modules/CCTVersionModule.sol#L3)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/modules/chainlink-ace/custom/CrossChainMintBurnExtractor.sol [Line: 2](../../../../../contracts/modules/chainlink-ace/custom/CrossChainMintBurnExtractor.sol#L2)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/modules/chainlink-ace/custom/ERC20TransferFromExtractor.sol [Line: 2](../../../../../contracts/modules/chainlink-ace/custom/ERC20TransferFromExtractor.sol#L2)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/modules/chainlink-ace/custom/MintBurnExtractor.sol [Line: 2](../../../../../contracts/modules/chainlink-ace/custom/MintBurnExtractor.sol#L2)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/modules/chainlink-ace/custom/TransferValidationPolicy.sol [Line: 3](../../../../../contracts/modules/chainlink-ace/custom/TransferValidationPolicy.sol#L3)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/modules/chainlink-ace/mocks/CanSendReceiveOverrideMock.sol [Line: 3](../../../../../contracts/modules/chainlink-ace/mocks/CanSendReceiveOverrideMock.sol#L3)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/modules/chainlink-ace/mocks/PolicyProtectedUpgradeableMocks.sol [Line: 2](../../../../../contracts/modules/chainlink-ace/mocks/PolicyProtectedUpgradeableMocks.sol#L2)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/modules/chainlink-ace/mocks/TransferRuleMocks.sol [Line: 3](../../../../../contracts/modules/chainlink-ace/mocks/TransferRuleMocks.sol#L3)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/modules/lite/CCTCMTATBaseERC1404.sol [Line: 3](../../../../../contracts/modules/lite/CCTCMTATBaseERC1404.sol#L3)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/modules/lite/CCTCMTATBaseERC20CrossChain.sol [Line: 3](../../../../../contracts/modules/lite/CCTCMTATBaseERC20CrossChain.sol#L3)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/modules/lite/CCTCMTATBasePolicyEngine.sol [Line: 3](../../../../../contracts/modules/lite/CCTCMTATBasePolicyEngine.sol#L3)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/modules/lite/PolicyValidationModuleERC1404.sol [Line: 3](../../../../../contracts/modules/lite/PolicyValidationModuleERC1404.sol#L3)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/modules/lite/ValidationModulePolicyEngine.sol [Line: 3](../../../../../contracts/modules/lite/ValidationModulePolicyEngine.sol#L3)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/modules/standard/CCTCommon.sol [Line: 3](../../../../../contracts/modules/standard/CCTCommon.sol#L3)

	```solidity
	pragma solidity ^0.8.20;
	```

</details>



## L-4: Literal Instead of Constant

Define and use `constant` variables instead of using literals. If the same constant literal value is used multiple times, create a constant state variable and reference it throughout the contract.

<details><summary>4 Found Instances</summary>


- Found in contracts/modules/chainlink-ace/custom/TransferValidationPolicy.sol [Line: 117](../../../../../contracts/modules/chainlink-ace/custom/TransferValidationPolicy.sol#L117)

	```solidity
	        if (parameters.length == 4) {
	```

- Found in contracts/modules/chainlink-ace/custom/TransferValidationPolicy.sol [Line: 131](../../../../../contracts/modules/chainlink-ace/custom/TransferValidationPolicy.sol#L131)

	```solidity
	        } else if (parameters.length == 3) {
	```

- Found in contracts/modules/chainlink-ace/custom/TransferValidationPolicy.sol [Line: 173](../../../../../contracts/modules/chainlink-ace/custom/TransferValidationPolicy.sol#L173)

	```solidity
	        if (parameters.length == 4) {
	```

- Found in contracts/modules/chainlink-ace/custom/TransferValidationPolicy.sol [Line: 183](../../../../../contracts/modules/chainlink-ace/custom/TransferValidationPolicy.sol#L183)

	```solidity
	        } else if (parameters.length == 3) {
	```

</details>



## L-5: PUSH0 Opcode

Solc compiler version 0.8.20 switches the default target EVM version to Shanghai, which means that the generated bytecode will include PUSH0 opcodes. Be sure to select the appropriate EVM version in case you intend to deploy on a chain other than mainnet like L2 chains that may not support PUSH0, otherwise deployment of your contracts will fail.

<details><summary>21 Found Instances</summary>


- Found in contracts/deployment/lite/ComplianceTokenCMTATLiteStandalone.sol [Line: 3](../../../../../contracts/deployment/lite/ComplianceTokenCMTATLiteStandalone.sol#L3)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/deployment/lite/ComplianceTokenCMTATLiteUUPSUpgradeable.sol [Line: 3](../../../../../contracts/deployment/lite/ComplianceTokenCMTATLiteUUPSUpgradeable.sol#L3)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/deployment/lite/ComplianceTokenCMTATLiteUpgradeable.sol [Line: 3](../../../../../contracts/deployment/lite/ComplianceTokenCMTATLiteUpgradeable.sol#L3)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/deployment/standard/ComplianceTokenCMTATStandalone.sol [Line: 3](../../../../../contracts/deployment/standard/ComplianceTokenCMTATStandalone.sol#L3)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/deployment/standard/ComplianceTokenCMTATUUPSUpgradeable.sol [Line: 3](../../../../../contracts/deployment/standard/ComplianceTokenCMTATUUPSUpgradeable.sol#L3)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/deployment/standard/ComplianceTokenCMTATUpgradeable.sol [Line: 3](../../../../../contracts/deployment/standard/ComplianceTokenCMTATUpgradeable.sol#L3)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/interfaces/IERC7943Fungible.sol [Line: 2](../../../../../contracts/interfaces/IERC7943Fungible.sol#L2)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/modules/CCTVersionModule.sol [Line: 3](../../../../../contracts/modules/CCTVersionModule.sol#L3)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/modules/chainlink-ace/custom/CrossChainMintBurnExtractor.sol [Line: 2](../../../../../contracts/modules/chainlink-ace/custom/CrossChainMintBurnExtractor.sol#L2)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/modules/chainlink-ace/custom/ERC20TransferFromExtractor.sol [Line: 2](../../../../../contracts/modules/chainlink-ace/custom/ERC20TransferFromExtractor.sol#L2)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/modules/chainlink-ace/custom/MintBurnExtractor.sol [Line: 2](../../../../../contracts/modules/chainlink-ace/custom/MintBurnExtractor.sol#L2)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/modules/chainlink-ace/custom/TransferValidationPolicy.sol [Line: 3](../../../../../contracts/modules/chainlink-ace/custom/TransferValidationPolicy.sol#L3)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/modules/chainlink-ace/mocks/CanSendReceiveOverrideMock.sol [Line: 3](../../../../../contracts/modules/chainlink-ace/mocks/CanSendReceiveOverrideMock.sol#L3)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/modules/chainlink-ace/mocks/PolicyProtectedUpgradeableMocks.sol [Line: 2](../../../../../contracts/modules/chainlink-ace/mocks/PolicyProtectedUpgradeableMocks.sol#L2)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/modules/chainlink-ace/mocks/TransferRuleMocks.sol [Line: 3](../../../../../contracts/modules/chainlink-ace/mocks/TransferRuleMocks.sol#L3)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/modules/lite/CCTCMTATBaseERC1404.sol [Line: 3](../../../../../contracts/modules/lite/CCTCMTATBaseERC1404.sol#L3)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/modules/lite/CCTCMTATBaseERC20CrossChain.sol [Line: 3](../../../../../contracts/modules/lite/CCTCMTATBaseERC20CrossChain.sol#L3)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/modules/lite/CCTCMTATBasePolicyEngine.sol [Line: 3](../../../../../contracts/modules/lite/CCTCMTATBasePolicyEngine.sol#L3)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/modules/lite/PolicyValidationModuleERC1404.sol [Line: 3](../../../../../contracts/modules/lite/PolicyValidationModuleERC1404.sol#L3)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/modules/lite/ValidationModulePolicyEngine.sol [Line: 3](../../../../../contracts/modules/lite/ValidationModulePolicyEngine.sol#L3)

	```solidity
	pragma solidity ^0.8.20;
	```

- Found in contracts/modules/standard/CCTCommon.sol [Line: 3](../../../../../contracts/modules/standard/CCTCommon.sol#L3)

	```solidity
	pragma solidity ^0.8.20;
	```

</details>



## L-6: Modifier Invoked Only Once

Consider removing the modifier or inlining the logic into the calling function.

<details><summary>1 Found Instances</summary>


- Found in contracts/modules/chainlink-ace/mocks/TransferRuleMocks.sol [Line: 104](../../../../../contracts/modules/chainlink-ace/mocks/TransferRuleMocks.sol#L104)

	```solidity
	    modifier onlyOwner() {
	```

</details>



## L-7: Empty Block

Consider removing empty blocks.

<details><summary>37 Found Instances</summary>


- Found in contracts/deployment/lite/ComplianceTokenCMTATLiteUUPSUpgradeable.sol [Line: 25](../../../../../contracts/deployment/lite/ComplianceTokenCMTATLiteUUPSUpgradeable.sol#L25)

	```solidity
	    function _authorizeUpgrade(
	```

- Found in contracts/deployment/standard/ComplianceTokenCMTATUUPSUpgradeable.sol [Line: 23](../../../../../contracts/deployment/standard/ComplianceTokenCMTATUUPSUpgradeable.sol#L23)

	```solidity
	    function _authorizeUpgrade(address newImplementation) internal virtual override(UUPSUpgradeable) onlyOwner {}
	```

- Found in contracts/modules/chainlink-ace/mocks/PolicyProtectedUpgradeableMocks.sol [Line: 45](../../../../../contracts/modules/chainlink-ace/mocks/PolicyProtectedUpgradeableMocks.sol#L45)

	```solidity
	    function check(Payload calldata) external pure override {}
	```

- Found in contracts/modules/chainlink-ace/mocks/PolicyProtectedUpgradeableMocks.sol [Line: 47](../../../../../contracts/modules/chainlink-ace/mocks/PolicyProtectedUpgradeableMocks.sol#L47)

	```solidity
	    function setExtractor(bytes4, address) external pure override {}
	```

- Found in contracts/modules/chainlink-ace/mocks/PolicyProtectedUpgradeableMocks.sol [Line: 49](../../../../../contracts/modules/chainlink-ace/mocks/PolicyProtectedUpgradeableMocks.sol#L49)

	```solidity
	    function setExtractors(bytes4[] calldata, address) external pure override {}
	```

- Found in contracts/modules/chainlink-ace/mocks/PolicyProtectedUpgradeableMocks.sol [Line: 55](../../../../../contracts/modules/chainlink-ace/mocks/PolicyProtectedUpgradeableMocks.sol#L55)

	```solidity
	    function setPolicyMapper(address, address) external pure override {}
	```

- Found in contracts/modules/chainlink-ace/mocks/PolicyProtectedUpgradeableMocks.sol [Line: 61](../../../../../contracts/modules/chainlink-ace/mocks/PolicyProtectedUpgradeableMocks.sol#L61)

	```solidity
	    function addPolicy(address, bytes4, address, bytes32[] calldata) external pure override {}
	```

- Found in contracts/modules/chainlink-ace/mocks/PolicyProtectedUpgradeableMocks.sol [Line: 63](../../../../../contracts/modules/chainlink-ace/mocks/PolicyProtectedUpgradeableMocks.sol#L63)

	```solidity
	    function addPolicyAt(address, bytes4, address, bytes32[] calldata, uint256) external pure override {}
	```

- Found in contracts/modules/chainlink-ace/mocks/PolicyProtectedUpgradeableMocks.sol [Line: 65](../../../../../contracts/modules/chainlink-ace/mocks/PolicyProtectedUpgradeableMocks.sol#L65)

	```solidity
	    function removePolicy(address, bytes4, address) external pure override {}
	```

- Found in contracts/modules/chainlink-ace/mocks/PolicyProtectedUpgradeableMocks.sol [Line: 71](../../../../../contracts/modules/chainlink-ace/mocks/PolicyProtectedUpgradeableMocks.sol#L71)

	```solidity
	    function setPolicyConfiguration(address, uint256, bytes4, bytes calldata) external pure override {}
	```

- Found in contracts/modules/chainlink-ace/mocks/PolicyProtectedUpgradeableMocks.sol [Line: 77](../../../../../contracts/modules/chainlink-ace/mocks/PolicyProtectedUpgradeableMocks.sol#L77)

	```solidity
	    function upgradePolicy(address, address, bytes calldata) external pure override {}
	```

- Found in contracts/modules/chainlink-ace/mocks/PolicyProtectedUpgradeableMocks.sol [Line: 79](../../../../../contracts/modules/chainlink-ace/mocks/PolicyProtectedUpgradeableMocks.sol#L79)

	```solidity
	    function setDefaultPolicyAllow(bool) external pure override {}
	```

- Found in contracts/modules/chainlink-ace/mocks/PolicyProtectedUpgradeableMocks.sol [Line: 81](../../../../../contracts/modules/chainlink-ace/mocks/PolicyProtectedUpgradeableMocks.sol#L81)

	```solidity
	    function setTargetDefaultPolicyAllow(address, bool) external pure override {}
	```

- Found in contracts/modules/chainlink-ace/mocks/PolicyProtectedUpgradeableMocks.sol [Line: 89](../../../../../contracts/modules/chainlink-ace/mocks/PolicyProtectedUpgradeableMocks.sol#L89)

	```solidity
	    function _authorizeAttachPolicyEngine(address) internal pure override {}
	```

- Found in contracts/modules/chainlink-ace/mocks/PolicyProtectedUpgradeableMocks.sol [Line: 91](../../../../../contracts/modules/chainlink-ace/mocks/PolicyProtectedUpgradeableMocks.sol#L91)

	```solidity
	    function _authorizePause() internal pure override {}
	```

- Found in contracts/modules/chainlink-ace/mocks/PolicyProtectedUpgradeableMocks.sol [Line: 93](../../../../../contracts/modules/chainlink-ace/mocks/PolicyProtectedUpgradeableMocks.sol#L93)

	```solidity
	    function _authorizeDeactivate() internal pure override {}
	```

- Found in contracts/modules/chainlink-ace/mocks/PolicyProtectedUpgradeableMocks.sol [Line: 95](../../../../../contracts/modules/chainlink-ace/mocks/PolicyProtectedUpgradeableMocks.sol#L95)

	```solidity
	    function _authorizeFreeze() internal pure override {}
	```

- Found in contracts/modules/lite/CCTCMTATBaseERC20CrossChain.sol [Line: 221](../../../../../contracts/modules/lite/CCTCMTATBaseERC20CrossChain.sol#L221)

	```solidity
	    function _authorizeCCIPSetAdmin() internal virtual override(CCIPModule) onlyRole(DEFAULT_ADMIN_ROLE) {}
	```

- Found in contracts/modules/lite/CCTCMTATBaseERC20CrossChain.sol [Line: 241](../../../../../contracts/modules/lite/CCTCMTATBaseERC20CrossChain.sol#L241)

	```solidity
	    function _authorizeBurnFrom()
	```

- Found in contracts/modules/lite/CCTCMTATBaseERC20CrossChain.sol [Line: 254](../../../../../contracts/modules/lite/CCTCMTATBaseERC20CrossChain.sol#L254)

	```solidity
	    function _authorizeSelfBurn()
	```

- Found in contracts/modules/lite/CCTCMTATBasePolicyEngine.sol [Line: 135](../../../../../contracts/modules/lite/CCTCMTATBasePolicyEngine.sol#L135)

	```solidity
	    function _authorizeAttachPolicyEngine(address) internal virtual override onlyRole(DEFAULT_ADMIN_ROLE) {}
	```

- Found in contracts/modules/lite/CCTCMTATBasePolicyEngine.sol [Line: 151](../../../../../contracts/modules/lite/CCTCMTATBasePolicyEngine.sol#L151)

	```solidity
	    function _validatePolicyEngine(address) internal virtual override(PolicyProtectedBaseUpgradeable) {}
	```

- Found in contracts/modules/lite/CCTCMTATBasePolicyEngine.sol [Line: 157](../../../../../contracts/modules/lite/CCTCMTATBasePolicyEngine.sol#L157)

	```solidity
	    function _authorizePause() internal virtual override(PauseModule) onlyRole(PAUSER_ROLE) {}
	```

- Found in contracts/modules/lite/CCTCMTATBasePolicyEngine.sol [Line: 158](../../../../../contracts/modules/lite/CCTCMTATBasePolicyEngine.sol#L158)

	```solidity
	    function _authorizeDeactivate() internal virtual override(PauseModule) onlyRole(DEFAULT_ADMIN_ROLE) {}
	```

- Found in contracts/modules/lite/CCTCMTATBasePolicyEngine.sol [Line: 160](../../../../../contracts/modules/lite/CCTCMTATBasePolicyEngine.sol#L160)

	```solidity
	    function _authorizeFreeze() internal virtual override(EnforcementModule) onlyRole(ENFORCER_ROLE) {}
	```

- Found in contracts/modules/standard/CCTCommon.sol [Line: 149](../../../../../contracts/modules/standard/CCTCommon.sol#L149)

	```solidity
	    function _authorizeAttachPolicyEngine(address) internal virtual override onlyOwner {}
	```

- Found in contracts/modules/standard/CCTCommon.sol [Line: 330](../../../../../contracts/modules/standard/CCTCommon.sol#L330)

	```solidity
	    function _authorizeERC20AttributeManagement() internal virtual override(ERC20BaseModule) runPolicy {}
	```

- Found in contracts/modules/standard/CCTCommon.sol [Line: 336](../../../../../contracts/modules/standard/CCTCommon.sol#L336)

	```solidity
	    function _authorizeMint() internal virtual override(ERC20MintModule) runPolicy {}
	```

- Found in contracts/modules/standard/CCTCommon.sol [Line: 342](../../../../../contracts/modules/standard/CCTCommon.sol#L342)

	```solidity
	    function _authorizeBurn() internal virtual override(ERC20BurnModule) runPolicy {}
	```

- Found in contracts/modules/standard/CCTCommon.sol [Line: 348](../../../../../contracts/modules/standard/CCTCommon.sol#L348)

	```solidity
	    function _authorizeDocumentManagement() internal virtual override(DocumentERC1643Module) runPolicy {}
	```

- Found in contracts/modules/standard/CCTCommon.sol [Line: 354](../../../../../contracts/modules/standard/CCTCommon.sol#L354)

	```solidity
	    function _authorizeExtraInfoManagement() internal virtual override(ExtraInformationModule) runPolicy {}
	```

- Found in contracts/modules/standard/CCTCommon.sol [Line: 360](../../../../../contracts/modules/standard/CCTCommon.sol#L360)

	```solidity
	    function _authorizeERC20Enforcer() internal virtual override(ERC20EnforcementModule) runPolicy {}
	```

- Found in contracts/modules/standard/CCTCommon.sol [Line: 366](../../../../../contracts/modules/standard/CCTCommon.sol#L366)

	```solidity
	    function _authorizeForcedTransfer() internal virtual override(ERC20EnforcementModule) runPolicy {}
	```

- Found in contracts/modules/standard/CCTCommon.sol [Line: 372](../../../../../contracts/modules/standard/CCTCommon.sol#L372)

	```solidity
	    function _authorizeCCIPSetAdmin() internal virtual override(CCIPModule) runPolicy {}
	```

- Found in contracts/modules/standard/CCTCommon.sol [Line: 383](../../../../../contracts/modules/standard/CCTCommon.sol#L383)

	```solidity
	    function _checkTokenBridge(address caller) internal virtual override(ERC20CrossChainModule) runPolicy {}
	```

- Found in contracts/modules/standard/CCTCommon.sol [Line: 390](../../../../../contracts/modules/standard/CCTCommon.sol#L390)

	```solidity
	    function _authorizeBurnFrom() internal virtual override(ERC20CrossChainModule) runPolicy {}
	```

- Found in contracts/modules/standard/CCTCommon.sol [Line: 397](../../../../../contracts/modules/standard/CCTCommon.sol#L397)

	```solidity
	    function _authorizeSelfBurn() internal virtual override(ERC20CrossChainModule) runPolicy {}
	```

</details>



## L-8: Loop Contains `require`/`revert`

Avoid `require` / `revert` statements in a loop because a single bad item can cause the whole transaction to fail. It's better to forgive on fail and return failed elements post processing of the loop

<details><summary>4 Found Instances</summary>


- Found in contracts/modules/chainlink-ace/custom/TransferValidationPolicy.sol [Line: 56](../../../../../contracts/modules/chainlink-ace/custom/TransferValidationPolicy.sol#L56)

	```solidity
	            for (uint256 i = 0; i < ruleAddrs.length; ++i) {
	```

- Found in contracts/modules/chainlink-ace/custom/TransferValidationPolicy.sol [Line: 71](../../../../../contracts/modules/chainlink-ace/custom/TransferValidationPolicy.sol#L71)

	```solidity
	        for (uint256 i = 0; i < rules_.length; ++i) {
	```

- Found in contracts/modules/chainlink-ace/custom/TransferValidationPolicy.sol [Line: 124](../../../../../contracts/modules/chainlink-ace/custom/TransferValidationPolicy.sol#L124)

	```solidity
	            for (uint256 i = 0; i < len; ++i) {
	```

- Found in contracts/modules/chainlink-ace/custom/TransferValidationPolicy.sol [Line: 137](../../../../../contracts/modules/chainlink-ace/custom/TransferValidationPolicy.sol#L137)

	```solidity
	            for (uint256 i = 0; i < len; ++i) {
	```

</details>



## L-9: Unused State Variable

State variable appears to be unused. No analysis has been performed to see if any inline assembly references it. Consider removing this unused variable.

<details><summary>1 Found Instances</summary>


- Found in contracts/modules/chainlink-ace/custom/TransferValidationPolicy.sol [Line: 39](../../../../../contracts/modules/chainlink-ace/custom/TransferValidationPolicy.sol#L39)

	```solidity
	    bytes32 private constant STORAGE_LOCATION = 0xd90ded5881f9295c61e86b2e3b551acbb5fe06f9f79d0cec87ddc5bb60d48e00;
	```

</details>



## L-10: Costly operations inside loop

Invoking `SSTORE` operations in loops may waste gas. Use a local variable to hold the loop computation result.

<details><summary>2 Found Instances</summary>


- Found in contracts/modules/chainlink-ace/custom/TransferValidationPolicy.sol [Line: 56](../../../../../contracts/modules/chainlink-ace/custom/TransferValidationPolicy.sol#L56)

	```solidity
	            for (uint256 i = 0; i < ruleAddrs.length; ++i) {
	```

- Found in contracts/modules/chainlink-ace/custom/TransferValidationPolicy.sol [Line: 71](../../../../../contracts/modules/chainlink-ace/custom/TransferValidationPolicy.sol#L71)

	```solidity
	        for (uint256 i = 0; i < rules_.length; ++i) {
	```

</details>



## L-11: State Change Without Event

There are state variable changes in this function but no event is emitted. Consider emitting an event to enable offchain indexers to track the changes.

<details><summary>10 Found Instances</summary>


- Found in contracts/modules/chainlink-ace/mocks/CanSendReceiveOverrideMock.sol [Line: 28](../../../../../contracts/modules/chainlink-ace/mocks/CanSendReceiveOverrideMock.sol#L28)

	```solidity
	    function setSendAllowed(bool allowed) external {
	```

- Found in contracts/modules/chainlink-ace/mocks/CanSendReceiveOverrideMock.sol [Line: 32](../../../../../contracts/modules/chainlink-ace/mocks/CanSendReceiveOverrideMock.sol#L32)

	```solidity
	    function setReceiveAllowed(bool allowed) external {
	```

- Found in contracts/modules/chainlink-ace/mocks/PolicyProtectedUpgradeableMocks.sol [Line: 20](../../../../../contracts/modules/chainlink-ace/mocks/PolicyProtectedUpgradeableMocks.sol#L20)

	```solidity
	    function setDetachShouldRevert(bool value) external {
	```

- Found in contracts/modules/chainlink-ace/mocks/PolicyProtectedUpgradeableMocks.sol [Line: 28](../../../../../contracts/modules/chainlink-ace/mocks/PolicyProtectedUpgradeableMocks.sol#L28)

	```solidity
	    function attach() external override {
	```

- Found in contracts/modules/chainlink-ace/mocks/PolicyProtectedUpgradeableMocks.sol [Line: 32](../../../../../contracts/modules/chainlink-ace/mocks/PolicyProtectedUpgradeableMocks.sol#L32)

	```solidity
	    function detach() external override {
	```

- Found in contracts/modules/chainlink-ace/mocks/PolicyProtectedUpgradeableMocks.sol [Line: 37](../../../../../contracts/modules/chainlink-ace/mocks/PolicyProtectedUpgradeableMocks.sol#L37)

	```solidity
	    function run(Payload calldata payload) external override {
	```

- Found in contracts/modules/chainlink-ace/mocks/TransferRuleMocks.sol [Line: 235](../../../../../contracts/modules/chainlink-ace/mocks/TransferRuleMocks.sol#L235)

	```solidity
	    function transferred(address from, address /* to */, uint256 value) external override {
	```

- Found in contracts/modules/chainlink-ace/mocks/TransferRuleMocks.sol [Line: 239](../../../../../contracts/modules/chainlink-ace/mocks/TransferRuleMocks.sol#L239)

	```solidity
	    function transferred(address /* spender */, address from, address /* to */, uint256 value) external override {
	```

- Found in contracts/modules/chainlink-ace/mocks/TransferRuleMocks.sol [Line: 293](../../../../../contracts/modules/chainlink-ace/mocks/TransferRuleMocks.sol#L293)

	```solidity
	    function transferred(address from, address /* to */, uint256 value) external override {
	```

- Found in contracts/modules/chainlink-ace/mocks/TransferRuleMocks.sol [Line: 297](../../../../../contracts/modules/chainlink-ace/mocks/TransferRuleMocks.sol#L297)

	```solidity
	    function transferred(address /* spender */, address from, address /* to */, uint256 value) external override {
	```

</details>



